--- a/config/sync/core.entity_view_display.node.article.default.yml
+++ b/config/sync/core.entity_view_display.node.article.default.yml
@@ -7,6 +7,7 @@ dependencies:
     - field.field.node.article.content_hierarchy
     - field.field.node.article.field_article_categories
     - field.field.node.article.field_article_image
+    - field.field.node.article.field_article_image_anonymous
     - field.field.node.article.field_article_image_migrated
     - field.field.node.article.field_article_months
     - field.field.node.article.field_article_related
@@ -26,6 +27,7 @@ dependencies:
     - field.field.node.article.field_institution
     - field.field.node.article.field_list_date
     - field.field.node.article.field_list_media
+    - field.field.node.article.field_list_media_anonymous
     - field.field.node.article.field_location
     - field.field.node.article.field_materials
     - field.field.node.article.field_media_downloads
@@ -44,6 +46,7 @@ dependencies:
     - layout_builder
     - layout_builder_restrictions
     - metatag
+    - responsive_image
     - text
     - user
 third_party_settings:
@@ -85,6 +88,15 @@ content:
     third_party_settings: {  }
     weight: 1
     region: content
+  field_article_image_anonymous:
+    type: responsive_image
+    label: above
+    settings:
+      responsive_image_style: ''
+      image_link: ''
+    third_party_settings: {  }
+    weight: 5
+    region: content
   field_article_months:
     type: entity_reference_label
     label: above
@@ -121,6 +133,7 @@ hidden:
   field_institution: true
   field_list_date: true
   field_list_media: true
+  field_list_media_anonymous: true
   field_location: true
   field_materials: true
   field_media_downloads: true
