--- a/config/sync/user.role.authenticated.yml
+++ b/config/sync/user.role.authenticated.yml
@@ -30,5 +30,9 @@ permissions:
   - 'view any organization profile'
   - 'view any profile'
   - 'view field_article_related'
+  - 'view field_colophon'
+  - 'view field_list_media_anonymous'
   - 'view media'
   - 'view own field_article_related'
+  - 'view own field_colophon'
+  - 'view own field_list_media_anonymous'
