--- a/config/sync/core.entity_form_display.node.article.default.yml
+++ b/config/sync/core.entity_form_display.node.article.default.yml
@@ -8,6 +8,7 @@ dependencies:
     - field.field.node.article.content_hierarchy
     - field.field.node.article.field_article_categories
     - field.field.node.article.field_article_image
+    - field.field.node.article.field_article_image_anonymous
     - field.field.node.article.field_article_image_migrated
     - field.field.node.article.field_article_months
     - field.field.node.article.field_article_related
@@ -27,6 +28,7 @@ dependencies:
     - field.field.node.article.field_institution
     - field.field.node.article.field_list_date
     - field.field.node.article.field_list_media
+    - field.field.node.article.field_list_media_anonymous
     - field.field.node.article.field_location
     - field.field.node.article.field_materials
     - field.field.node.article.field_media_downloads
@@ -40,15 +42,17 @@ dependencies:
     - field.field.node.article.lat
     - field.field.node.article.lon
     - field.field.node.article.sis_map_address_dawa
+    - image.style.thumbnail
     - node.type.article
     - workflows.workflow.editorial
   module:
+    - allowed_formats
     - content_moderation
-    - datetime
     - dds_dawa
     - entity_browser
     - field_group
     - file
+    - image
     - media_library
     - metatag
     - paragraphs_asymmetric_translation_widgets
@@ -73,19 +77,19 @@ third_party_settings:
         open: false
     group_list:
       children:
-        - field_list_date
-        - field_list_media
         - field_description
+        - field_list_media_anonymous
+        - field_list_media
       label: Listevisning
       region: content
       parent_name: ''
-      weight: 6
+      weight: 5
       format_type: fieldset
       format_settings:
         classes: ''
         show_empty_fields: false
         id: ''
-        description: 'Bruges hvis artiklen bliver vist i en liste, og som et resumé i starten af artiklen.'
+        description: ''
         required_fields: true
     group_article_metadata:
       children:
@@ -213,7 +217,7 @@ third_party_settings:
       label: 'Vis på kort'
       region: content
       parent_name: ''
-      weight: 19
+      weight: 18
       format_type: fieldset
       format_settings:
         classes: ''
@@ -455,7 +459,7 @@ third_party_settings:
       label: 'Indhold vist på sideboksene'
       region: content
       parent_name: ''
-      weight: 7
+      weight: 6
       format_type: fieldset
       format_settings:
         classes: ''
@@ -469,7 +473,24 @@ third_party_settings:
       label: Kategorier
       region: content
       parent_name: ''
-      weight: 20
+      weight: 19
+      format_type: fieldset
+      format_settings:
+        classes: ''
+        show_empty_fields: false
+        id: ''
+        description: ''
+        required_fields: true
+    group_content:
+      children:
+        - title
+        - body
+        - field_article_image
+        - field_article_image_anonymous
+      label: Indhold
+      region: content
+      parent_name: ''
+      weight: 4
       format_type: fieldset
       format_settings:
         classes: ''
@@ -486,7 +507,7 @@ mode: default
 content:
   body:
     type: text_textarea_with_summary
-    weight: 5
+    weight: 2
     region: content
     settings:
       rows: 9
@@ -496,13 +517,13 @@ content:
     third_party_settings: {  }
   created:
     type: datetime_timestamp
-    weight: 9
+    weight: 8
     region: content
     settings: {  }
     third_party_settings: {  }
   field_article_image:
     type: entity_browser_entity_reference
-    weight: 4
+    weight: 3
     region: content
     settings:
       entity_browser: media_directories_modal
@@ -514,6 +535,14 @@ content:
       field_widget_display_settings: {  }
       selection_mode: selection_append
     third_party_settings: {  }
+  field_article_image_anonymous:
+    type: image_image
+    weight: 4
+    region: content
+    settings:
+      progress_indicator: throbber
+      preview_image_style: thumbnail
+    third_party_settings: {  }
   field_article_months:
     type: options_buttons
     weight: 18
@@ -522,7 +551,7 @@ content:
     third_party_settings: {  }
   field_article_related:
     type: entity_reference_autocomplete
-    weight: 22
+    weight: 20
     region: content
     settings:
       match_operator: CONTAINS
@@ -549,7 +578,10 @@ content:
     settings:
       rows: 5
       placeholder: ''
-    third_party_settings: {  }
+    third_party_settings:
+      allowed_formats:
+        hide_help: '1'
+        hide_guidelines: '1'
   field_colophon_author:
     type: string_textfield
     weight: 29
@@ -568,7 +600,7 @@ content:
     third_party_settings: {  }
   field_colophon_photographer:
     type: string_textfield
-    weight: 31
+    weight: 32
     region: content
     settings:
       size: 60
@@ -581,7 +613,10 @@ content:
     settings:
       rows: 5
       placeholder: ''
-    third_party_settings: {  }
+    third_party_settings:
+      allowed_formats:
+        hide_help: '1'
+        hide_guidelines: '1'
   field_copy_sheet:
     type: media_library_widget
     weight: 34
@@ -591,7 +626,7 @@ content:
     third_party_settings: {  }
   field_description:
     type: string_textarea
-    weight: 15
+    weight: 16
     region: content
     settings:
       rows: 3
@@ -604,7 +639,10 @@ content:
     settings:
       rows: 5
       placeholder: ''
-    third_party_settings: {  }
+    third_party_settings:
+      allowed_formats:
+        hide_help: '1'
+        hide_guidelines: '1'
   field_factboxes:
     type: paragraphs_classic_asymmetric
     weight: 19
@@ -638,24 +676,26 @@ content:
     third_party_settings: {  }
   field_institution:
     type: text_textfield
-    weight: 43
+    weight: 42
     region: content
     settings:
       size: 60
       placeholder: ''
     third_party_settings: {  }
-  field_list_date:
-    type: datetime_default
-    weight: 13
-    region: content
-    settings: {  }
-    third_party_settings: {  }
   field_list_media:
     type: media_library_widget
-    weight: 14
+    weight: 18
     region: content
     settings:
       media_types: {  }
+    third_party_settings: {  }
+  field_list_media_anonymous:
+    type: image_image
+    weight: 17
+    region: content
+    settings:
+      progress_indicator: throbber
+      preview_image_style: thumbnail
     third_party_settings: {  }
   field_location:
     type: options_buttons
@@ -679,7 +719,7 @@ content:
     third_party_settings: {  }
   field_meta_tags:
     type: metatag_firehose
-    weight: 23
+    weight: 21
     region: content
     settings:
       sidebar: true
@@ -693,19 +733,19 @@ content:
     third_party_settings: {  }
   field_section_bg_graphics:
     type: options_select
-    weight: 17
+    weight: 16
     region: content
     settings: {  }
     third_party_settings: {  }
   field_section_bg_graphics_pos:
     type: options_select
-    weight: 18
+    weight: 17
     region: content
     settings: {  }
     third_party_settings: {  }
   field_subject:
     type: options_buttons
-    weight: 14
+    weight: 21
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -716,7 +756,10 @@ content:
     settings:
       rows: 5
       placeholder: ''
-    third_party_settings: {  }
+    third_party_settings:
+      allowed_formats:
+        hide_help: '1'
+        hide_guidelines: '1'
   field_time:
     type: text_textarea
     weight: 0
@@ -724,7 +767,10 @@ content:
     settings:
       rows: 5
       placeholder: ''
-    third_party_settings: {  }
+    third_party_settings:
+      allowed_formats:
+        hide_help: '1'
+        hide_guidelines: '1'
   langcode:
     type: language_select
     weight: 0
@@ -750,19 +796,19 @@ content:
     third_party_settings: {  }
   moderation_state:
     type: moderation_state_default
-    weight: 14
+    weight: 13
     region: content
     settings: {  }
     third_party_settings: {  }
   path:
     type: path
-    weight: 12
+    weight: 11
     region: content
     settings: {  }
     third_party_settings: {  }
   promote:
     type: boolean_checkbox
-    weight: 10
+    weight: 9
     region: content
     settings:
       display_label: true
@@ -775,14 +821,14 @@ content:
     third_party_settings: {  }
   status:
     type: boolean_checkbox
-    weight: 16
+    weight: 15
     region: content
     settings:
       display_label: true
     third_party_settings: {  }
   sticky:
     type: boolean_checkbox
-    weight: 13
+    weight: 12
     region: content
     settings:
       display_label: true
@@ -796,13 +842,13 @@ content:
       placeholder: ''
     third_party_settings: {  }
   translation:
-    weight: 11
+    weight: 10
     region: content
     settings: {  }
     third_party_settings: {  }
   uid:
     type: entity_reference_autocomplete
-    weight: 8
+    weight: 7
     region: content
     settings:
       match_operator: CONTAINS
@@ -811,7 +857,7 @@ content:
       placeholder: ''
     third_party_settings: {  }
   url_redirects:
-    weight: 15
+    weight: 14
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -819,3 +865,4 @@ hidden:
   content_hierarchy: true
   field_article_categories: true
   field_article_image_migrated: true
+  field_list_date: true
