--- a/config/sync/core.entity_view_display.node.dot_on_map.teaser.yml
+++ b/config/sync/core.entity_view_display.node.dot_on_map.teaser.yml
@@ -8,6 +8,7 @@ dependencies:
     - field.field.node.dot_on_map.field_class
     - field.field.node.dot_on_map.field_contact_information
     - field.field.node.dot_on_map.field_files
+    - field.field.node.dot_on_map.field_list_media_anonymous
     - field.field.node.dot_on_map.field_location
     - field.field.node.dot_on_map.field_meta_tags
     - field.field.node.dot_on_map.field_people_and_places
@@ -21,7 +22,9 @@ dependencies:
     - field.field.node.dot_on_map.lon
     - field.field.node.dot_on_map.sis_map_address_dawa
     - node.type.dot_on_map
+    - responsive_image.styles.list_view
   module:
+    - responsive_image
     - text
     - user
 id: node.dot_on_map.teaser
@@ -35,17 +38,26 @@ content:
     settings:
       trim_length: 600
     third_party_settings: {  }
-    weight: 101
+    weight: 2
     region: content
   content_moderation_control:
     settings: {  }
     third_party_settings: {  }
-    weight: -20
+    weight: 0
+    region: content
+  field_list_media_anonymous:
+    type: responsive_image
+    label: hidden
+    settings:
+      responsive_image_style: list_view
+      image_link: ''
+    third_party_settings: {  }
+    weight: 3
     region: content
   links:
     settings: {  }
     third_party_settings: {  }
-    weight: 100
+    weight: 1
     region: content
 hidden:
   field_class: true
