--- a/config/sync/field.field.node.article.field_article_image.yml
+++ b/config/sync/field.field.node.article.field_article_image.yml
@@ -10,7 +10,7 @@ id: node.article.field_article_image
 field_name: field_article_image
 entity_type: node
 bundle: article
-label: 'Article image'
+label: 'Artiklens billede (webmasters)'
 description: "Et billede vist i begyndelsen af artiklen, under resuméet og før teksten.\r\nVi anbefaler et billedeformat på 900px X 400px. Ellers vil dit billede blive beskåret."
 required: false
 translatable: false
