--- a/config/sync/field.field.node.article.field_colophon.yml
+++ b/config/sync/field.field.node.article.field_colophon.yml
@@ -11,6 +11,7 @@ dependencies:
 third_party_settings:
   allowed_formats:
     allowed_formats:
+      - simpel_html_til_faktabokse
       - basic_html
 id: node.article.field_colophon
 field_name: field_colophon
