--- a/config/sync/field.field.node.article.field_time.yml
+++ b/config/sync/field.field.node.article.field_time.yml
@@ -10,7 +10,9 @@ dependencies:
     - text
 third_party_settings:
   allowed_formats:
-    allowed_formats: {  }
+    allowed_formats:
+      - simpel_html_til_faktabokse
+      - basic_html
 id: node.article.field_time
 field_name: field_time
 entity_type: node
