--- a/config/sync/field.field.node.dot_on_map.lat.yml
+++ b/config/sync/field.field.node.dot_on_map.lat.yml
@@ -10,7 +10,7 @@ field_name: lat
 entity_type: node
 bundle: dot_on_map
 label: Breddegrad
-description: ''
+description: 'Bruges hvis der ikke er nogen adresse. Eksempelværdi: 56.1131237.'
 required: false
 translatable: true
 default_value: {  }
