--- a/config/sync/field.storage.node.field_article_image.yml
+++ b/config/sync/field.storage.node.field_article_image.yml
@@ -8,7 +8,7 @@ dependencies:
     - node
 third_party_settings:
   field_permissions:
-    permission_type: public
+    permission_type: custom
 id: node.field_article_image
 field_name: field_article_image
 entity_type: node
