--- a/config/sync/field.storage.node.field_list_media.yml
+++ b/config/sync/field.storage.node.field_list_media.yml
@@ -8,7 +8,7 @@ dependencies:
     - node
 third_party_settings:
   field_permissions:
-    permission_type: public
+    permission_type: custom
 _core:
   default_config_hash: F9XDHqGLLRFaN02pZ4Rsa3Jt1-4GGgioutnB3tfGu4E
 id: node.field_list_media
