--- a/config/sync/field.storage.node.field_teaching_goals.yml
+++ b/config/sync/field.storage.node.field_teaching_goals.yml
@@ -3,8 +3,12 @@ langcode: da
 status: true
 dependencies:
   module:
+    - field_permissions
     - node
     - text
+third_party_settings:
+  field_permissions:
+    permission_type: public
 id: node.field_teaching_goals
 field_name: field_teaching_goals
 entity_type: node
