--- a/config/sync/user.role.webmaster.yml
+++ b/config/sync/user.role.webmaster.yml
@@ -36,12 +36,14 @@ dependencies:
     - content_moderation
     - content_translation
     - contextual
+    - entity_browser
     - entity_clone
     - field_permissions
     - file
     - filter
     - layout_builder
     - media
+    - media_directories_ui
     - media_icons
     - media_library_bulk_upload
     - metatag
@@ -71,7 +73,11 @@ permissions:
   - 'access content overview'
   - 'access contextual links'
   - 'access files overview'
+  - 'access media directories ui browser'
   - 'access media overview'
+  - 'access media_directories_editor_browser entity browser pages'
+  - 'access media_directories_modal entity browser pages'
+  - 'access media_directories_overview entity browser pages'
   - 'access own webform configuration'
   - 'access profile overview'
   - 'access site reports'
@@ -113,8 +119,11 @@ permissions:
   - 'create content translations'
   - 'create document media'
   - 'create dot_on_map content'
+  - 'create field_article_image'
   - 'create field_article_related'
+  - 'create field_colophon'
   - 'create field_header'
+  - 'create field_list_media'
   - 'create image media'
   - 'create media'
   - 'create news content'
@@ -203,16 +212,23 @@ permissions:
   - 'edit any webform'
   - 'edit any webform submission'
   - 'edit atom'
+  - 'edit field_article_image'
   - 'edit field_article_related'
+  - 'edit field_colophon'
   - 'edit field_header'
+  - 'edit field_list_media'
+  - 'edit field_list_media_anonymous'
   - 'edit own almanac content'
   - 'edit own article content'
   - 'edit own audio media'
   - 'edit own blog_post content'
   - 'edit own document media'
   - 'edit own dot_on_map content'
+  - 'edit own field_article_image'
   - 'edit own field_article_related'
+  - 'edit own field_colophon'
   - 'edit own field_header'
+  - 'edit own field_list_media'
   - 'edit own image media'
   - 'edit own news content'
   - 'edit own page content'
@@ -283,8 +299,12 @@ permissions:
   - 'view article revisions'
   - 'view blog_post revisions'
   - 'view dot_on_map revisions'
+  - 'view field_article_image'
+  - 'view field_list_media'
   - 'view latest version'
   - 'view news revisions'
+  - 'view own field_article_image'
+  - 'view own field_list_media'
   - 'view own organization profile'
   - 'view own profile'
   - 'view own unpublished content'
