--- a/config/sync/editor.editor.full_html.yml
+++ b/config/sync/editor.editor.full_html.yml
@@ -47,7 +47,7 @@ settings:
         -
           name: 'Block Formatting'
           items:
-            - Format
+            - Styles
         -
           name: Tools
           items:
@@ -57,6 +57,8 @@ settings:
     drupallink:
       linkit_enabled: false
       linkit_profile: ''
+    stylescombo:
+      styles: "p.default|Normal\r\nh1|Overskrift 1\r\nh2|Overskrift 2\r\nh3|Overskrift 3\r\nh4|Overskrift 4\r\nh5|Overskrift 5\r\nh6|Overskrift 6\r\npre|Formateret\r\np.resume|Resumé"
 image_upload:
   status: true
   scheme: public
