--- a/config/sync/core.entity_form_display.node.article.default.yml
+++ b/config/sync/core.entity_form_display.node.article.default.yml
@@ -683,11 +683,18 @@ content:
       placeholder: ''
     third_party_settings: {  }
   field_list_media:
-    type: media_library_widget
+    type: entity_browser_entity_reference
     weight: 18
     region: content
     settings:
-      media_types: {  }
+      entity_browser: media_directories_modal
+      field_widget_display: label
+      field_widget_edit: true
+      field_widget_remove: true
+      field_widget_replace: false
+      open: false
+      field_widget_display_settings: {  }
+      selection_mode: selection_append
     third_party_settings: {  }
   field_list_media_anonymous:
     type: image_image
