--- a/config/sync/field.field.node.article.field_list_media.yml
+++ b/config/sync/field.field.node.article.field_list_media.yml
@@ -13,7 +13,7 @@ field_name: field_list_media
 entity_type: node
 bundle: article
 label: 'Liste media (Webmasters)'
-description: 'Billede vist på søgeresultater og andre lister.'
+description: 'Et lille billede, der vises på interne søgeresultater og andre lister. Det kan være det samme billede som artiklens billede.'
 required: false
 translatable: true
 default_value: {  }
