--- a/config/sync/user.role.anonymous.yml
+++ b/config/sync/user.role.anonymous.yml
@@ -42,11 +42,14 @@ permissions:
   - 'use text format simpel_html_til_faktabokse'
   - 'view any organization profile'
   - 'view any profile'
+  - 'view field_article_image'
+  - 'view field_article_image_anonymous'
   - 'view field_article_related'
   - 'view field_colophon'
   - 'view field_list_media'
   - 'view field_list_media_anonymous'
   - 'view media'
+  - 'view own field_article_image'
   - 'view own field_article_image_anonymous'
   - 'view own field_article_related'
   - 'view own field_colophon'
