--- a/config/sync/core.entity_form_display.node.news.default.yml
+++ b/config/sync/core.entity_form_display.node.news.default.yml
@@ -3,6 +3,7 @@ langcode: da
 status: true
 dependencies:
   config:
+    - entity_browser.browser.media_directories_modal
     - field.field.node.news.body
     - field.field.node.news.content_hierarchy
     - field.field.node.news.field_article_categories
@@ -24,8 +25,8 @@ dependencies:
     - content_hierarchy
     - content_moderation
     - datetime
+    - entity_browser
     - field_group
-    - media_library
     - metatag
     - paragraphs_asymmetric_translation_widgets
     - path
@@ -188,11 +189,18 @@ content:
     settings: {  }
     third_party_settings: {  }
   field_list_media:
-    type: media_library_widget
+    type: entity_browser_entity_reference
     weight: 29
     region: content
     settings:
-      media_types: {  }
+      entity_browser: media_directories_modal
+      field_widget_display: label
+      field_widget_edit: true
+      field_widget_remove: true
+      field_widget_replace: false
+      open: true
+      field_widget_display_settings: {  }
+      selection_mode: selection_append
     third_party_settings: {  }
   field_meta_tags:
     type: metatag_firehose
@@ -203,11 +211,18 @@ content:
       use_details: true
     third_party_settings: {  }
   field_news_image:
-    type: media_library_widget
+    type: entity_browser_entity_reference
     weight: 2
     region: content
     settings:
-      media_types: {  }
+      entity_browser: media_directories_modal
+      field_widget_display: label
+      field_widget_edit: true
+      field_widget_remove: true
+      field_widget_replace: false
+      open: true
+      field_widget_display_settings: {  }
+      selection_mode: selection_append
     third_party_settings: {  }
   field_news_inspiration:
     type: entity_reference_autocomplete
