--- a/config/sync/field.field.node.article.field_contact_person.yml
+++ b/config/sync/field.field.node.article.field_contact_person.yml
@@ -12,6 +12,7 @@ third_party_settings:
   allowed_formats:
     allowed_formats:
       - simpel_html_til_faktabokse
+      - basic_html
 id: node.article.field_contact_person
 field_name: field_contact_person
 entity_type: node
