--- a/config/sync/user.role.authenticated.yml
+++ b/config/sync/user.role.authenticated.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   config:
     - filter.format.basic_html
+    - filter.format.simpel_html_til_faktabokse
   module:
     - field_permissions
     - filter
@@ -27,12 +28,17 @@ permissions:
   - 'search content'
   - 'skip comment approval'
   - 'use text format basic_html'
+  - 'use text format simpel_html_til_faktabokse'
   - 'view any organization profile'
   - 'view any profile'
+  - 'view field_article_image'
+  - 'view field_article_image_anonymous'
   - 'view field_article_related'
   - 'view field_colophon'
   - 'view field_list_media_anonymous'
   - 'view media'
+  - 'view own field_article_image'
+  - 'view own field_article_image_anonymous'
   - 'view own field_article_related'
   - 'view own field_colophon'
   - 'view own field_list_media_anonymous'
