--- a/config/sync/user.role.organization.yml
+++ b/config/sync/user.role.organization.yml
@@ -3,6 +3,7 @@ langcode: da
 status: true
 dependencies:
   config:
+    - filter.format.simpel_html_til_faktabokse
     - media.type.document
     - media.type.image
     - media.type.remote_video
@@ -13,6 +14,7 @@ dependencies:
   module:
     - content_moderation
     - field_permissions
+    - filter
     - media
     - node
     - profile
@@ -44,5 +46,6 @@ permissions:
   - 'edit own video media'
   - 'update own organization profile'
   - 'use editorial transition create_new_draft'
+  - 'use text format simpel_html_til_faktabokse'
   - 'view own unpublished content'
   - 'view own unpublished media'
