--- a/config/sync/user.role.authenticated.yml
+++ b/config/sync/user.role.authenticated.yml
@@ -33,12 +33,14 @@ permissions:
   - 'view any profile'
   - 'view field_article_image'
   - 'view field_article_image_anonymous'
+  - 'view field_article_image_migrated'
   - 'view field_article_related'
   - 'view field_colophon'
   - 'view field_list_media_anonymous'
   - 'view media'
   - 'view own field_article_image'
   - 'view own field_article_image_anonymous'
+  - 'view own field_article_image_migrated'
   - 'view own field_article_related'
   - 'view own field_colophon'
   - 'view own field_list_media_anonymous'
