--- a/config/sync/core.entity_form_display.node.page.default.yml
+++ b/config/sync/core.entity_form_display.node.page.default.yml
@@ -3,6 +3,7 @@ langcode: da
 status: true
 dependencies:
   config:
+    - entity_browser.browser.media_directories_modal
     - field.field.node.page.body
     - field.field.node.page.content_hierarchy
     - field.field.node.page.field_description
@@ -19,8 +20,8 @@ dependencies:
   module:
     - content_hierarchy
     - content_moderation
+    - entity_browser
     - field_group
-    - media_library
     - metatag
     - paragraphs_asymmetric_translation_widgets
     - path
@@ -112,11 +113,18 @@ content:
       display_label: true
     third_party_settings: {  }
   field_list_media:
-    type: media_library_widget
+    type: entity_browser_entity_reference
     weight: 3
     region: content
     settings:
-      media_types: {  }
+      entity_browser: media_directories_modal
+      field_widget_display: label
+      field_widget_edit: true
+      field_widget_remove: true
+      field_widget_replace: false
+      open: true
+      field_widget_display_settings: {  }
+      selection_mode: selection_append
     third_party_settings: {  }
   field_meta_tags:
     type: metatag_firehose
